Add endpoints to fix #17 #26
